--- a/Order/pom.xml
+++ b/Order/pom.xml
@@ -43,7 +43,7 @@
       <version>67.1</version>
     </dependency>
     <dependency>
-      <!-- _____JSP Web_____ -->
+      <!-- _____Web App_____ -->
       <groupId>javax.servlet</groupId>
       <artifactId>javax.servlet-api</artifactId>
       <version>4.0.1</version>
@@ -65,6 +65,17 @@
       <groupId>javax.ws.rs</groupId>
       <artifactId>javax.ws.rs-api</artifactId>
       <version>2.1.1</version>
+    </dependency>
+    <!-- ______Token______ -->
+    <dependency>
+      <groupId>io.jsonwebtoken</groupId>
+      <artifactId>jjwt</artifactId>
+      <version>0.9.1</version>
+    </dependency>
+    <dependency>
+      <groupId>io.jsonwebtoken</groupId>
+      <artifactId>jjwt-api</artifactId>
+      <version>0.11.2</version>
     </dependency>
     <!-- _____JAX-RS Client_____ -->
     <!--Test-->
