--- a/Order/pom.xml
+++ b/Order/pom.xml
@@ -25,7 +25,7 @@
       <version>4.11</version>
       <scope>test</scope>
     </dependency>
-    <!-- _________ ORM & DB_______ -->
+    <!-- _______________ ORM & DB____________ -->
     <dependency>
       <groupId>org.hibernate</groupId>
       <artifactId>hibernate-core</artifactId>
@@ -36,14 +36,14 @@
       <artifactId>mysql-connector-java</artifactId>
       <version>8.0.22</version>
     </dependency>
-    <!-- _____Persian Calendar_____ -->
+    <!-- __________Persian Calendar__________ -->
     <dependency>
       <groupId>com.ibm.icu</groupId>
       <artifactId>icu4j</artifactId>
       <version>67.1</version>
     </dependency>
     <dependency>
-      <!-- _____Web App_____ -->
+      <!-- __________Web App__________ -->
       <groupId>javax.servlet</groupId>
       <artifactId>javax.servlet-api</artifactId>
       <version>4.0.1</version>
@@ -60,13 +60,30 @@
       <artifactId>jstl</artifactId>
       <version>1.2</version>
     </dependency>
-    <!-- _____JAX RS_____ -->
+    <!-- ___________JAX RS___________ -->
     <dependency>
       <groupId>javax.ws.rs</groupId>
       <artifactId>javax.ws.rs-api</artifactId>
       <version>2.1.1</version>
     </dependency>
-    <!-- ______Token______ -->
+    <!-- Filter, Object2Json mapper & viseversa -->
+    <dependency>
+      <groupId>com.fasterxml.jackson.core</groupId>
+      <artifactId>jackson-databind</artifactId>
+      <version>2.12.1</version>
+    </dependency>
+    <!--Client Test : InjectionManagerFactory-->
+    <dependency>
+      <groupId>org.glassfish.jersey.inject</groupId>
+      <artifactId>jersey-hk2</artifactId>
+      <version>3.0.1</version>
+    </dependency>
+    <dependency>
+      <groupId>jakarta.annotation</groupId>
+      <artifactId>jakarta.annotation-api</artifactId>
+      <version>1.3.5</version>
+    </dependency>
+    <!-- _______________Token________________ -->
     <dependency>
       <groupId>io.jsonwebtoken</groupId>
       <artifactId>jjwt</artifactId>
@@ -77,7 +94,13 @@
       <artifactId>jjwt-api</artifactId>
       <version>0.11.2</version>
     </dependency>
-    <!-- _____JAX-RS Client_____ -->
+    <!--Authentication-->
+    <dependency>
+      <groupId>org.glassfish.jersey.core</groupId>
+      <artifactId>jersey-client</artifactId>
+      <version>3.0.1</version>
+    </dependency>
+    <!-- _____________________JAX-RS Client_____________________ -->
     <!--Test-->
     <dependency>
       <groupId>org.glassfish.jersey.core</groupId>
@@ -90,13 +113,36 @@
       <artifactId>jersey-hk2</artifactId>
       <version>3.0.1</version>
     </dependency>
-    <!-- _____change part to byte[]_____ -->
+    <!-- ________________________ JAX-WS ________________________ -->
+    <dependency>
+      <groupId>jakarta.servlet</groupId>
+      <artifactId>jakarta.servlet-api</artifactId>
+      <version>5.0.0</version>
+    </dependency>
+    <dependency>
+      <groupId>com.sun.xml.ws</groupId>
+      <artifactId>jaxws-rt</artifactId>
+      <version>2.3.3</version>
+    </dependency>
+    <dependency>
+      <groupId>jakarta.xml.ws</groupId>
+      <artifactId>jakarta.xml.ws-api</artifactId>
+      <version>2.3.3</version>
+    </dependency>
+    <!-- Object2XML mapper -->
+    <dependency>
+      <groupId>javax.xml.bind</groupId>
+      <artifactId>jaxb-api</artifactId>
+      <version>2.3.1</version>
+    </dependency>
+    <!-- WSgen (WSDL generator) & WSimport (Create client object from WSDL) See Plugin section-->
+    <!-- ________________Image: change part to byte[]________________ -->
     <dependency>
       <groupId>commons-io</groupId>
       <artifactId>commons-io</artifactId>
       <version>2.6</version>
     </dependency>
-    <!-- _____jasper report_____ -->
+    <!-- ______________jasper report________________ -->
     <dependency>
       <groupId>net.sf.jasperreports</groupId>
       <artifactId>jasperreports</artifactId>
@@ -112,7 +158,8 @@
       <artifactId>itext</artifactId>
       <version>2.1.7</version>
     </dependency>
-    <!-- ______Log______ -->
+    <!-- ___________________ Log ___________________ -->
+    <!-- Log with Logback -->
     <dependency>
       <groupId>org.slf4j</groupId>
       <artifactId>slf4j-api</artifactId>
@@ -129,6 +176,7 @@
       <artifactId>logback-core</artifactId>
       <version>1.2.3</version>
     </dependency>
+    <!-- Log with Apache Log4j2 -->
     <dependency>
       <groupId>org.apache.logging.log4j</groupId>
       <artifactId>log4j-api</artifactId>
@@ -177,14 +225,40 @@
       </plugins>
     </pluginManagement>
       <plugins>
-          <plugin>
-              <groupId>org.apache.maven.plugins</groupId>
-              <artifactId>maven-compiler-plugin</artifactId>
+        <!-- ________________ Generating Stub for Soap services _____________________ -->
+        <plugin>
+          <groupId>org.codehaus.mojo</groupId>
+          <artifactId>jaxws-maven-plugin</artifactId>
+          <version>2.6</version>
+          <executions>
+            <execution>
+              <id>Customer_wsdl</id>
+              <goals><goal>wsimport</goal></goals>
               <configuration>
-                  <source>11</source>
-                  <target>11</target>
+                <wsdlUrls><wsdlUrl>http://localhost:8080/order/soap/customer?wsdl</wsdlUrl></wsdlUrls>
+                <keep>true</keep>
+                <packageName>com.afshin.Webservice.stub.customer</packageName>
+                <sourceDestDir>${basedir}/src/test/java</sourceDestDir>
               </configuration>
-          </plugin>
+            </execution>
+          </executions>
+          <dependencies>
+            <dependency>
+              <groupId>org.codehaus.mojo</groupId>
+              <artifactId>jaxws-maven-plugin</artifactId>
+              <version>2.6</version>
+            </dependency>
+          </dependencies>
+          <!-- WSgen (WSDL generator) & WS import (Create client object from WSDL) See Plugin section -->
+        </plugin>
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-compiler-plugin</artifactId>
+          <configuration>
+            <source>11</source>
+            <target>11</target>
+          </configuration>
+        </plugin>
       </plugins>
   </build>
 </project>
